feat: implement booking room
